<?xml version="1.0" encoding="utf-8"?><!--
  ~ Created by RadenMas on 16/8/2022.
  ~ Copyright (c) 2022.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipChildren="false"
    android:clipToPadding="false"
    android:orientation="vertical"
    tools:context=".ui.info.InfoActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp">

        <ImageView
            android:id="@+id/imgBack"
            android:layout_width="28dp"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_arrow_left" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="32dp"
            android:layout_toEndOf="@id/imgBack"
            android:fontFamily="@font/roboto_medium"
            android:text="Info Pengembang"
            android:textColor="@color/primary_text"
            android:textSize="18sp" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="24dp"
                android:src="@drawable/img_faiz" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:fontFamily="@font/roboto_bold"
                android:gravity="center"
                android:text="@string/developer_name"
                android:textColor="@color/primary_text"
                android:textSize="16sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:fontFamily="@font/roboto_medium"
                android:gravity="center"
                android:text="@string/developer"
                android:textColor="@color/primary_text"
                android:textSize="14sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="16dp"
                android:fontFamily="@font/roboto"
                android:gravity="center"
                android:justificationMode="inter_word"
                android:text="@string/desc_app"
                android:textColor="@color/primary_text"
                android:textSize="14sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="16dp"
                android:fontFamily="@font/roboto_bold"
                android:gravity="center"
                android:text="@string/prodi"
                android:textColor="@color/primary_text"
                android:textSize="14sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="16dp"
                android:fontFamily="@font/roboto_bold"
                android:gravity="center"
                android:text="@string/jurusan"
                android:textColor="@color/primary_text"
                android:textSize="14sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="16dp"
                android:fontFamily="@font/roboto_bold"
                android:gravity="center"
                android:text="@string/fakultas"
                android:textColor="@color/primary_text"
                android:textSize="14sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:fontFamily="@font/roboto_bold"
                android:gravity="center"
                android:text="@string/universitas"
                android:textColor="@color/primary_text"
                android:textSize="14sp" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>